--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
 .env
 node_modules/
+build/
+dist/
+coverage/
+.eslintcache
+.prettiercache
+.parcel-cache
+.cache
+
+# IDE specific files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+logs/
+
+# Temporary files
+tmp/
+temp/
+*~ # Backup files
+*.swp # Vim swap files
