--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+  # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/positive-rhino-454912-k2/fyuse-image', '.']
     env:
@@ -10,8 +11,12 @@ steps:
       - 'NEXT_PUBLIC_TRYON_TRACK=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/tryonTracking'
       - 'NEXT_PUBLIC_HISTORY_HANDLER=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/historyhandler'
       - 'NEXT_PUBLIC_REMOVE_ITEM=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/removeFromWardrobe'
+
+  # Step 2: Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/positive-rhino-454912-k2/fyuse-image']
+
+  # Step 3: Deploy the service to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -22,4 +27,10 @@ steps:
       - '--platform=managed'
       - '--allow-all'
       - '--update-env-vars=NEXT_PUBLIC_FITANALYSIS_API_URL=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/matchingAnalyzer,NEXT_PUBLIC_UPLOAD_API_URL=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/uploadImage,NEXT_PUBLIC_TRYON_TRACK=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/tryonTracking,NEXT_PUBLIC_HISTORY_HANDLER=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/historyhandler,NEXT_PUBLIC_REMOVE_ITEM=https://asia-southeast2-positive-rhino-454912-k2.cloudfunctions.net/removeFromWardrobe,NEXT_PUBLIC_GOOGLE_CLIENT_ID=671019984810-u8r9lk9efcv16q2dje7vdgp70ul5aqgd.apps.googleusercontent.com,NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=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,BUCKET_NAME=fyuse-static-assets'
+
+# Specify the images to be built
 images: ['gcr.io/positive-rhino-454912-k2/fyuse-image']
+
+# Configure logging options
+options:
+  logging: CLOUD_LOGGING_ONLY
