--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"axios": "^1.8.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"form-data": "^4.0.2",
 		"formidable": "^3.5.2",
